--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,13 @@
   <body>
     <h4>Demos</h4>
     <ul>
+      <li><a href="/angular">angular</a></li>
       <li><a href="/availability">availability</a></li>
       <li><a href="/baselayers">baselayers</a></li>
       <li><a href="/conference">conference</a></li>
       <li><a href="/coverage">coverage</a></li>
       <li><a href="/drawing">drawing</a></li>
+      <li><a href="/elevation">elevation</a></li>
       <li><a href="/following">following</a></li>
       <li><a href="/google">google</a></li>
       <li><a href="/hashing">hashing</a></li>
