--- a/views/browserify.ejs
+++ b/views/browserify.ejs
@@ -6,9 +6,12 @@
   <body>
     <h4>Available Browserify Javascript Libraries</h4>
     <dl>
-    <% for( property in libs ) { %>
-      <dt><%= property %></dt><dd><%= libs[property].library %> -> <%= libs[property].options.expose || 'N/A' %></dd>
-    <% } %>
+      <% for( property in libs ) { %>
+      <dt><%= property %></dt>
+      <dd><%= libs[property].library %> ->
+        <a href="http://localhost:8080/browserify?lib=<%= libs[property].options.expose %>"><%= libs[property].options.expose %></a>
+      </dd>
+      <% } %>
     </dl>
   </body>
 </html>
