--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title><%= title %></title>
@@ -14,6 +14,7 @@
       <li><a href="/drawing">drawing</a></li>
       <li><a href="/elevation">elevation</a></li>
       <li><a href="/following">following</a></li>
+      <li><a href="/firebase">firebase</a></li>
       <li><a href="/google">google</a></li>
       <li><a href="/hashing">hashing</a></li>
       <li><a href="/notification">notification</a></li>
