added clustering demo

--- a/views/angular.ejs
+++ b/views/angular.ejs
@@ -10,7 +10,7 @@
     <% } else { %>
     <% } %>
 
-    <script src="/browserify?libs=angular,util"></script>
+    <script src="/browserify/load?libs=angular,util"></script>
     <script>
       var a = require( 'angular' );
     </script>
