--- a/views/baselayers.ejs
+++ b/views/baselayers.ejs
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify?libs=branding"></script>
+    <script src="/browserify/load?libs=branding"></script>
     <script>
       var b = require( 'branding' );
     </script>
