--- a/views/conference.ejs
+++ b/views/conference.ejs
@@ -38,7 +38,7 @@
       <ul id="clients">
       </ul>
     </div>
-    <script src="/browserify?libs=branding,conference,io,jquery,util"></script>
+    <script src="/browserify/load?libs=branding,conference,io,jquery,util"></script>
     <script>
       var b = require( 'branding' );
       var c = require( 'conference' );
