--- a/views/elevation.ejs
+++ b/views/elevation.ejs
@@ -24,7 +24,7 @@
 
     <!--<script type="text/javascript" src="http://localhost:8888/elevation.js?variable=elevation"></script>-->
 
-    <script src="/browserify?libs=branding,topojson"></script>
+    <script src="/browserify/load?libs=branding,topojson"></script>
     <script>
       var b = require( 'branding' );
       var t = require( 'topojson' );
