--- a/views/firebase.ejs
+++ b/views/firebase.ejs
@@ -5,8 +5,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
-    <script src="/browserify?libs=angular,project,util"></script>
-    <!--<script src="/browserify?libs=util"></script>-->
+    <script src="/browserify/load?libs=angular,project,util"></script>
+    <!--<script src="/browserify/load?libs=util"></script>-->
     <script>
       var u = require( 'util' );
       var a = require( 'angular' );
