--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
       <li><a href="/angular">angular</a></li>
       <li><a href="/availability">availability</a></li>
       <li><a href="/baselayers">baselayers</a></li>
+      <li><a href="/browserify">browserify</a></li>
+      <li><a href="/clustering">clustering</a></li>
       <li><a href="/conference">conference</a></li>
       <li><a href="/coverage">coverage</a></li>
       <li><a href="/drawing">drawing</a></li>
@@ -18,6 +20,7 @@
       <li><a href="/google">google</a></li>
       <li><a href="/hashing">hashing</a></li>
       <li><a href="/notification">notification</a></li>
+      <li><a href="/polymer">polymer</a></li>
       <li><a href="/regions">regions</a></li>
       <li><a href="/resources">resources</a></li>
       <li><a href="/search">search</a></li>
