--- a/views/debug.ejs
+++ b/views/debug.ejs
@@ -44,7 +44,7 @@
     <div>
       <ul id="conference"></ul>
     </div>
-    <script src="/browserify?libs=util,jquery,io"></script>
+    <script src="/browserify/load?libs=util,jquery,io"></script>
     <script>
       var u = require( 'util' );
       var $ = require( 'jquery' );
