--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify?libs=branding,notifications,util"></script>
+    <script src="/browserify/load?libs=branding,notifications,util"></script>
     <script>
       var b = require( 'branding' );
       var n = require( 'notifications' );
