--- a/views/regions.ejs
+++ b/views/regions.ejs
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify?libs=branding,template,geometry,util,jquery"></script>
+    <script src="/browserify/load?libs=branding,template,geometry,util,jquery"></script>
     <script>
       var b = require( 'branding' );
       var t = require( 'template' );
