--- a/views/search.ejs
+++ b/views/search.ejs
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify?libs=branding,template"></script>
+    <script src="/browserify/load?libs=branding,template"></script>
     <script>
       var b = require( 'branding' );
       var t = require( 'template' );
