--- a/views/temporal.ejs
+++ b/views/temporal.ejs
@@ -21,8 +21,7 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <!--<script src="/dist/bundle.js"></script>-->
-    <script src="/browserify?libs=branding,time"></script>
+    <script src="/browserify/load?libs=branding,time"></script>
     <script>
       var b = require( 'branding' );
       var t = require( 'time' );
