use openlayers and thredds for serving netcdf gridded data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
       <li><a href="/terrain">terrain</a></li>
       <li><a href="/tracking">tracking</a></li>
       <li><a href="/wax">wax</a></li>
+      <li><a href="/weather">weather</a></li>
     </ul>
   </body>
 </html>
