--- a/views/temporal.ejs
+++ b/views/temporal.ejs
@@ -13,6 +13,7 @@
     <![endif]-->
 
     <script src="/dist/leaflet-src.js"></script>
+    <script src="/dist/leaflet-hash.js"></script>
 
     <% if ( agent.indexOf( 'Mobile' ) > 0 ) {%>
     <script src="/dist/cordova-2.3.0.js"></script>
@@ -21,15 +22,19 @@
   </head>
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
-    <script src="/browserify/load?libs=branding,time"></script>
+    <script src="/browserify/load?libs=branding,time,moment"></script>
     <script>
       var b = require( 'branding' );
+      var m = require( 'moment' );
       var t = require( 'time' );
-    </script>
-    <script>
+
       var a = "http://emap.dse.vic.gov.au/ArcGIS/rest/services/mapscape/MapServer/tile";
       var b = "http://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/";
 
+                 //http://c.tiles.mapbox.com/v3/mapbox.natural-earth-2/6/60/38.png
+      var y = 'http://otile1.mqcdn.com/tiles/1.0.0/map';
+
+      var q = "http://{s}.tiles.mapbox.com/v3/mapbox.natural-earth-2";
       var c = "http://" + document.location.hostname + ":8888/";
       var d = "http://" + document.location.hostname + ":9090/ncwms/wms?crs=CRS:84";
 
@@ -37,9 +42,14 @@
       var g = '/{z}/{y}/{x}.png';
 
       var map = L.map( 'map', { attributionControl: false, timeControl: true } ).setView( [-37.8, 144.9], 7 );
-
+      //var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
+      //    .setView([40, -74.50], 9);
+      //
       var underlays = {
-        "arcgis": L.tileLayer( b + g, { maxZoom: 18 } ).addTo( map )
+        "arcgis": L.tileLayer( b + g, { maxZoom: 18 } ).addTo( map ),
+        //"natural": L.tileLayer( q + f, { maxZoom: 18 } ).addTo( map ),
+        //"topo": L.tileLayer( c + "arcgistopo" + f, { maxZoom: 18 } ).addTo( map ),
+        "otile": L.tileLayer( y + f, { maxZoom: 18 } ).addTo( map )
       };
 
       var overlays = {
@@ -71,23 +81,37 @@
           transparent: true
         } ).addTo( map )
         */
-        //"ffdi"     : L.tileLayer(c + 'ffdi' + f, { maxZoom: 18, opacity: 0.3 }).addTo(map),
+        "ffdi"     : L.tileLayer(c + 'ffdi' + f + "?time={time}", { maxZoom: 18, opacity: 0.3 }).addTo(map),
         //"temp"     : L.tileLayer(c + 'temp' + f, { maxZoom: 18, opacity: 0.3 }).addTo(map)
-        "ffdi"     : L.tileLayer.wms(c + 'ffdi', {
+        //"ffdi"     : L.tileLayer.wms(c + 'ffdi', {
+        //  //version: '1.3.0',
+        //  time: new Date(  ).toISOString(),
+        //  maxZoom: 18,
+        //  opacity: 0.3
+        //}),
+        "wind"     : L.tileLayer.wms(c + 'wind', {
           //version: '1.3.0',
-          time: new Date( 2013, 04, 08 ).toISOString(),
+          time:  m().startOf( 'day' ).toDate().toISOString(),
+          maxZoom: 18,
+          opacity: 0.3
+        }),
+        "rain"     : L.tileLayer.wms(c + 'rain', {
+          //version: '1.3.0',
+          time:  m().startOf( 'day' ).toDate().toISOString(),
           maxZoom: 18,
           opacity: 0.3
         }),
         "temp"     : L.tileLayer.wms(c + 'temp', {
           //version: '1.3.0',
-          time: new Date( 2013, 04, 08 ).toISOString(),
+          time:  m().startOf( 'day' ).toDate().toISOString(),
           maxZoom: 18,
           opacity: 0.3
         })
       };
 
       L.control.layers( underlays, overlays ).addTo( map );
+      L.control.scale({ imperial: false }).addTo(map);
+      L.hash(map);
 
     </script>
   </body>
